# linkedIn-Automation

./: .gitignore
backend/: app.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/public/icons/: 890.eps
frontend/src/: App.vue  main.ts
frontend/src/components/logins/: Login.vue  Logout.vue
frontend/src/pages/: Home.vue
