[project]
name = "backend"
version = "0.0.1"
description = "This is LinkedIn automation application"
authors = [
    {name = "prateekrauniyar345",email = "raun9583@vandals.uidaho.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "flask-restplus (>=0.13.0,<0.14.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
